force-app/main/default/objects/Contract/fields/Current_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Current_Endpoint__c</fullName>
    <description>Text Field created by Ringlead</description>
    <label>Current Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>