force-app/main/default/objects/Contract/fields/ia_crm__Bill_in_advance_term__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Bill_in_advance_term__c</fullName>
    <label>Bill in advance term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>days</fullName>
                <label>Days</label>
            </value>
            <value>
                <fullName>months</fullName>
                <label>Months</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>