force-app/main/default/objects/Contract/fields/ia_crm__Bill_to__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Bill_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill to</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>BillToContracts</relationshipName>
    <type>Lookup</type>
</CustomField>