force-app/main/default/objects/Contract/fields/ia_crm__Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Billing_Frequency__c</fullName>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>