force-app/main/default/objects/Contract/fields/ia_crm__Intacct_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Contract_ID__c</fullName>
    <inlineHelpText>This field will keep the Intacct Contract Id.</inlineHelpText>
    <label>Intacct Contract ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>