force-app/main/default/objects/Contract/fields/ia_crm__Intacct_Entity__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Entity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Intacct Entity/Location</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>ia_crm__Intacct_Entity__c.ia_crm__Hidden__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>ia_crm__Intacct_Entity__c.ia_crm__Status__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ia_crm__Intacct_Entity__c</referenceTo>
    <relationshipLabel>Contracts (Location)</relationshipLabel>
    <relationshipName>ContractsLocation_del</relationshipName>
    <type>Lookup</type>
</CustomField>