force-app/main/default/objects/Contract/fields/ia_crm__Intacct_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Entity_Id__c</fullName>
    <formula>IF( ISPICKVAL( ia_crm__Intacct_Entity__r.ia_crm__Entity_Type__c , &apos;Entity&apos;), ia_crm__Intacct_Entity__r.ia_crm__Intacct_Entity_ID__c ,   ia_crm__Intacct_Entity__r.ia_crm__Top_Entity__r.ia_crm__Intacct_Entity_ID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intacct Entity Id</label>
    <type>Text</type>
</CustomField>