force-app/main/default/objects/Contract/fields/ia_crm__Intacct_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Sync_Status__c</fullName>
    <label>Intacct Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>