force-app/main/default/objects/Contract/fields/ia_crm__Is_valid_for_sync__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Is_valid_for_sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the contract is not valid this will unchecked.</description>
    <label>Is valid for sync</label>
    <type>Checkbox</type>
</CustomField>