force-app/main/default/objects/Contract/fields/ia_crm__Is_valid_for_sync_status__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Is_valid_for_sync_status__c</fullName>
    <label>Is valid for sync status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>