force-app/main/default/objects/Contract/fields/ia_crm__Ready_to_sync__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Ready_to_sync__c</fullName>
    <description>Show green flag when when contract is valid to be synced, oherwise will show red flag.</description>
    <formula>CASE( ia_crm__Is_valid_for_sync_status__c, &quot;OK&quot;, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;OK&quot;), &quot;Error&quot;, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Error&quot;), &quot;Warning&quot;, IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Warning&quot;), TEXT(ia_crm__Is_valid_for_sync_status__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready to sync</label>
    <type>Text</type>
</CustomField>