force-app/main/default/objects/Contract/fields/ia_crm__Renewal_period__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Renewal_period__c</fullName>
    <label>Renewal period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Years</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>