force-app/main/default/objects/Contract/fields/ia_crm__Renewed_Contract__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Renewed_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the parent contract that was renewed.</description>
    <label>Renewed Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contracts (Renewed Contract)</relationshipLabel>
    <relationshipName>RenewalContracts</relationshipName>
    <type>Lookup</type>
</CustomField>