force-app/main/default/objects/Contract/fields/ia_crm__Renewed_Intacct_Contract__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Renewed_Intacct_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewed Intacct Contract</label>
    <referenceTo>ia_crm__Intacct_Contract__c</referenceTo>
    <relationshipLabel>Contracts (Renewed Contract)</relationshipLabel>
    <relationshipName>RenewedIntacctContracts</relationshipName>
    <type>Lookup</type>
</CustomField>