force-app/main/default/objects/Contract/fields/ia_crm__Ship_to__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Ship_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship to</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Ship to)</relationshipLabel>
    <relationshipName>ShipToContracts</relationshipName>
    <type>Lookup</type>
</CustomField>