force-app/main/default/objects/Contract/fields/ia_crm__Sync_Header_Only__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Sync_Header_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Header Only</label>
    <type>Checkbox</type>
</CustomField>