force-app/main/default/objects/Contract/fields/ia_crm__Term_Length__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Term_Length__c</fullName>
    <label>Renewal length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>