force-app/main/default/objects/Contract/fields/ia_crm__Total_Billed__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Total_Billed__c</fullName>
    <label>Total Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>