force-app/main/default/objects/Contract/fields/RingLead_App_Field__c.field-meta.xml
<CustomField>
    <fullName>RingLead_App_Field__c</fullName>
    <description>Text Field created by Ringlead</description>
    <label>RingLead App Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>