force-app/main/default/objects/Contract/fields/RingLead_Last_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>RingLead_Last_Processed_Date__c</fullName>
    <description>Date time Field created by Ringlead</description>
    <label>Last Processed Date</label>
    <type>DateTime</type>
</CustomField>