force-app/main/default/objects/Contract/validationRules/ia_crm__ContractNameRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ia_crm__ContractNameRequired</fullName>
    <active>false</active>
    <description>Check if the Contract Name is empty</description>
    <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>