force-app/main/default/objects/Contract/validationRules/ia_crm__Start_and_End_Dates_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ia_crm__Start_and_End_Dates_Validation</fullName>
    <active>true</active>
    <description>Start Date cannot be greater that End Date.</description>
    <errorConditionFormula>StartDate &gt;  EndDate</errorConditionFormula>
    <errorMessage>Start date must be earlier than the end date.</errorMessage>
</ValidationRule>